<resources>

    <string name="app_name">Sleep and Wake</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Sleep and Wake</string>
    <string name="button_wakeup">Wake</string>
    <string name="button_sleep">Sleep</string>
    <string name="textview_default">Click to add</string>
    <string name="textview_fadein">FadeIn:</string>
    <string name="textview_fadeintime">FadeIn Time:</string>
    <string name="textview_fadeout">Music FadeOut:</string>
    <string name="textview_fadeouttime">FadeOut Time:</string>
    <string name="textview_fadeinminute">minutes</string>
    <string name="textview_fadeoutdisplay">Display FadeOut:</string>
    <string name="edittext_fadeintime">15</string>
    <string name="button_savewakeupsettings">Save Settings</string>
    <string name="button_cancelwakeupsettings">Abort</string>
    <string name="button_plus">+</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
	<string name="radiobutton_on">On</string>
	<string name="radiobutton_off">Off</string>
	<string name="button_delete">Delete</string>
	<string name="button_monday">M</string>
	<string name="button_tuesday">T</string>
	<string name="button_wednesday">W</string>
	<string name="button_thursday">T</string>
	<string name="button_friday">F</string>
	<string name="button_saturday">S</string>
	<string name="button_sunday">S</string>
	<string name="checkbox_weeklyrepetition">Weekly repetition</string>
	<string name="button_stopalarm">I´m awake - push to stop</string>	
	
    
    <color name="red">#FF0000</color>
    <color name="green">#00FF00</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#B4CDCD</color>
    <color name="skyblue">#8DB6CD</color>
</resources>