<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_settings" >

    <ScrollView 
       	android:layout_width="fill_parent"
       	android:layout_height="fill_parent">
    
        <LinearLayout
        		android:orientation="vertical"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content" >
        
    
    <LinearLayout 
      		android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:orientation="horizontal">

       <TimePicker
           android:id="@+id/timePicker_wakeup"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

    </LinearLayout>
       
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <Button
        android:id="@+id/button_monday"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/button_monday" />    
        
    <Button
        android:id="@+id/button_tuesday"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/button_tuesday" />
     
    <Button
        android:id="@+id/button_wednesday"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/button_wednesday" />
      
    <Button
        android:id="@+id/button_thursday"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/button_thursday" />
       
    <Button
        android:id="@+id/button_friday"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/button_friday" />
        
    <Button
        android:id="@+id/button_saturday"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/button_saturday" />
         
    <Button
        android:id="@+id/button_sunday"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="wrap_content"
        android:text="@string/button_sunday" /> 
    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
   
    <CheckBox
        android:id="@+id/checkBox_weeklyrepetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/checkbox_weeklyrepetition"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_fadeintime"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_fadeintime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_fadeintime"
            android:inputType="number"
            android:textColor="@color/white" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_fadeinminute"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/textview_fadein"
            android:textColor="@color/white" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButton_fadeinon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_on"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioButton_fadeinoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_off"
                android:textColor="@color/white" />
        </RadioGroup>
    </LinearLayout>
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
        android:id="@+id/button_savewakeupsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_savewakeupsettings"
        android:onClick="saveWakeupSettings"
        android:textColor="@color/white" />

         <Button
        android:id="@+id/button_deletewakeupsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:onClick="deleteWakeupSettings"
        android:textColor="@color/white" />
        
    	<Button
        android:id="@+id/button_cancelwakeupsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancelwakeupsettings"
        android:onClick="cancelWakeupSettings"
        android:textColor="@color/white" />
    </LinearLayout>

    	</LinearLayout>
     </ScrollView>
    
</LinearLayout>