<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/textview_fadeout" />
		
        <RadioGroup
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
        <RadioButton
            android:id="@+id/radioButton_fadeouton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_on" />

    	<RadioButton
        	android:id="@+id/radioButton_fadeoutoff"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/radiobutton_off" />
		</RadioGroup>
	</LinearLayout>
	   
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/textview_fadeoutdisplay" />
		
        <RadioGroup
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
        <RadioButton
            android:id="@+id/radioButton_fadeoutdisplayon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_on" />

    	<RadioButton
        	android:id="@+id/radioButton_fadeoutdisplayoff"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/radiobutton_off" />
		</RadioGroup>
	</LinearLayout>
    
    <LinearLayout 
      		android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:orientation="horizontal">
    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    		android:text="@string/textview_fadeouttime"/>
        
    	<EditText
        	android:id="@+id/edit_fadeouttime"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/edittext_fadeintime"
        	android:inputType="number"/>
	
    	  <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    		android:text="@string/textview_fadeinminute"/>
	</LinearLayout>
    
     
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
        android:id="@+id/button_savesleepsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_savewakeupsettings"
        android:onClick="saveWakeupSettings" />

         <Button
        android:id="@+id/button_deletesleepsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:onClick="deleteWakeupSettings" />
        
    	<Button
        android:id="@+id/button_cancelsleepsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancelwakeupsettings"
        android:onClick="cancelWakeupSettings" />
    </LinearLayout>

</LinearLayout>