<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:id="@+id/button_wakeup0"
            android:text="@string/button_wakeup"
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skyblue"/>
        
        <Button 
            android:id="@+id/button_textwakeup0"
            android:text="@string/textview_default"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:onClick="wakeupSettings"/>
    </LinearLayout>
    
     <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:id="@+id/button_wakeup1"
            android:text="@string/button_wakeup"
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skyblue"
            android:visibility="gone"/>
        
        <Button 
            android:id="@+id/button_textwakeup1"
            android:text="@string/textview_default"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:onClick="wakeupSettings"
            android:visibility="gone"/>
    </LinearLayout>
    
       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:id="@+id/button_wakeup2"
            android:text="@string/button_wakeup"
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skyblue"
            android:visibility="gone"/>
        
        <Button 
            android:id="@+id/button_textwakeup2"
            android:text="@string/textview_default"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:onClick="wakeupSettings"
            android:visibility="gone"/>
    </LinearLayout>
     
           <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:id="@+id/button_wakeup3"
            android:text="@string/button_wakeup"
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skyblue"
            android:visibility="gone"/>
        
        <Button 
            android:id="@+id/button_textwakeup3"
            android:text="@string/textview_default"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:onClick="wakeupSettings"
            android:visibility="gone"/>
    </LinearLayout>
       
               <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:id="@+id/button_wakeup4"
            android:text="@string/button_wakeup"
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skyblue"
            android:visibility="gone"/>
        
        <Button 
            android:id="@+id/button_textwakeup4"
            android:text="@string/textview_default"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:onClick="wakeupSettings"
            android:visibility="gone"/>
    </LinearLayout>
           
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:id="@+id/button_sleep1"
            android:text="@string/button_sleep"
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skyblue"/>
        
        <Button 
            android:id="@+id/button_textsleep1"
            android:text="@string/textview_default"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>
